# mathshaper

./: .gitignore  Cargo.toml  README.md  build.rs  bundler.toml  install_vst.bat
ressources/: text_input.txt
src/: editor.rs  lib.rs  main.rs  math.rs  shaper.rs  style.css
src/editor/: shaper_view.rs
src/math/: chebychev.rs
