[package]
name = "mathshaper"
version = "0.1.0"
edition = "2021"
authors = ["Finn Heintzmann <f.heintzmann@ostfalia.de>"]
license = "GPL-3.0-or-later"
homepage = "_"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
evalexpr = "11.3.0"
rand = "0.8.5"
triple_buffer = "8.0.0"
rubato = "0.15.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[dev-dependencies]
plotly = "0.8.4"
rand = "0.8.5"
